# VoxCPM.cpp

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  README_zh.md
benchmark/: CMakeLists.txt  voxcpm_benchmark.cpp
docs/: GGML_BEST_PRACTICES.md  GGML_CORE_CONCEPTS.md  audio_vae_ggml_operator_investigation_zh.md  audio_vae_initialization_failure_analysis.md  audio_vae_quantization_progress_zh.md  audiovae_performance_investigation.md  ggml_subtree_maintenance_strategy.md  imatrix_calibration_dataset_zh.tsv  imatrix_calibration_guide.md  imatrix_calibration_template_zh.txt  logical-hatching-zebra.md  minicpm_model_design.md  minicpm_model_design_plan.md  quant_implementation_experience.md  quant_pre.md  quantize_and_imatrix_commands_zh.md  repository_split_bootstrap_zh.md  voxcpm_audio_vae_plan.md  voxcpm_batching_feasibility_review_zh.md  voxcpm_cpp_backend.md  voxcpm_cuda_inference_round_summary_zh.md  voxcpm_cuda_optimization_notes_zh.md  voxcpm_decode_refactor_summary_zh.md  voxcpm_localdit_unified_plan.md  voxcpm_localenv_plan.md  voxcpm_shared_weight_store_refactor.md
examples/: CMakeLists.txt  voxcpm_imatrix.cpp  voxcpm_quantize.cpp  voxcpm_tts.cpp
include/voxcpm/: audio-vae.h  backend.h  common.h  components.h  config.h  context.h  fsq.h  imatrix.h  localenc.h  locdit.h  minicpm.h  quantize.h  tokenizer.h  unified_cfm.h  voxcpm.h  weight-store.h
scripts/: benchmark_exported_weights.sh  convert_voxcpm_to_gguf.py  export_quantized_weights.sh
src/: audio-vae.cpp  backend.cpp  components.cpp  context.cpp  fsq.cpp  imatrix.cpp  localenc.cpp  locdit.cpp  minicpm.cpp  quantize.cpp  tokenizer.cpp  unified_cfm.cpp  voxcpm.cpp  weight-store.cpp
tests/: CMakeLists.txt  test_audio_vae.cpp  test_components.cpp  test_fsq.cpp  test_imatrix.cpp  test_localenc.cpp  test_locdit.cpp  test_minicpm.cpp  test_quantize.cpp  test_tokenizer.cpp  test_unified_cfm.cpp  test_voxcpm.cpp
